# olinda

./: README.md  pyproject.toml
onnx_runner/: pyproject.toml
onnx_runner/onnx_runner/: morgan_featurizer.py  onnx_runner.py
src/olinda/: distillation.py  featurizer.py  generic_model.py  tuner.py
src/olinda/cli/: cmd.py
src/olinda/cli/commands/: distill.py
src/olinda/configs/: vars.py
src/olinda/data/: __init__.py  catboost_dataset.py  chemprop_dataset.py  generic_model_output.py  reference_smiles.py  xgboost_dataset.py
src/olinda/models/: distilled_model.py
src/olinda/reports/: __init__.py  base.py  plots.py  report.py
src/olinda/utils/: s3.py  utils.py
src/olinda/utils/zairachem/: precalculations.py  utils.py  zairachem.py
