[tool.poetry]
name = "olinda"
version = "0.3.0"
description = "A model distillation library"
authors = ["Ersilia Open Source Initiative <hello@ersilia.io>"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=2.7.0"
pytorch-lightning = "^1.9.4"
onnx = "^1.12.0"
onnxruntime = ">=1.17.3"
onnxmltools = ">=1.13.0"
onnx_runner = { path = "onnx_runner", develop = true }
webdataset = "=0.2.18"
gin-config = "^0.5.0"
click = "^8.1.3"
pydantic = "^1.9.2"
xdg = "^5.1.1"
joblib = "^1.1.0"
cbor2 = "^5.4.3"
pandas = ">=1.3.5"
cbor = "^1.0.0"
numpy = "^1.23.4"
lapx = "0.5.5"
griddify = "0.0.2"
rdkit = "2024.3.6"
skl2onnx = ">=1.18.0"
boto3 = ">=1.34.150"
botocore = ">=1.34.150"
progress = ">=1.6"
protobuf = "=3.20.3"
optuna = ">=4.3.0"
optuna-integration = {version = ">=4.3.0", extras = ["xgboost"]}
xgboost = ">=3.0.0"
stylia = { git = "https://github.com/ersilia-os/stylia.git" }


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
black = "^22.6.0"
darglint = "^1.8.1"

[tool.poetry.scripts]
olinda = "olinda.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
my_package = ["src/olinda/reference/library/olinda_reference_library.csv"]
